# appium_pytest

./: LICENSE  README.md
main/: .gitignore  README.md  conftest.py  pyproject.toml
main/tests/: test.py
main/utils/: common_methods.py  logger.py
